Fix detail meeting + Swagger
